# lp-foundations

./: pyproject.toml
.github/worflows/: ci.yaml
life_expectancy/: cleaning.py  region.py  strategy.py
life_expectancy/tests/: conftest.py  test_cleaning.py
life_expectancy/tests/fixtures/: eu_life_expectancy_expected_raw.csv
