[tool.poetry]
name = "life-expectancy"
version = "0.1.0"
description = "First assignment of the Foundations Learning Path"
authors = ["Diana Correia"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"